handle character encoding as described in section 2.5.2.2 of JSF 1.1
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167123 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -3,6 +3,7 @@ MyFaces Release Notes
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
+* bug #998464 request charset handling is invalid
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.6 beta
