--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -3,6 +3,7 @@ MyFaces Release Notes
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
+* Japanese translation
 * bug #998464 request charset handling is invalid
 
 ----------------------------------------------------------------------
