--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -6,6 +6,7 @@ Changes in Release 1.0.7 beta
 * new custom component: HtmlPanelStack
 * Japanese translation
 * bug #998464 request charset handling is invalid
+* bug #1001511 fileupload compponent don't support setHeaderEncoding
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.6 beta
