--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -4,6 +4,7 @@ MyFaces Release Notes
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
 * new custom component: HtmlPanelStack
+* new custom component: Stylesheet
 * new extended HtmlInputTextarea component (with user role support)
 * Japanese translation
 * bug #998464 request charset handling is invalid
