--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -19,7 +19,9 @@ Changes in Release 1.0.7 beta
 * HtmlCommandSortHeader now supports immediate attribute
 * bug fix: No decode for spread checkbox or radio
 * bug fix: NPE in MessageUtils when there was no ViewRoot
-
+* bug #1012909 support Oracle ADF
+* bug #1007065 f:view should tokenize locale attribute
+* bug #1013489 support EL expression at <f:loadBundle>
 ----------------------------------------------------------------------
 Changes in Release 1.0.6 beta
 * switch to apache license
