added some bug-fixing
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167196 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -23,6 +23,9 @@ Changes in Release 1.0.7 beta
 * bug #1007065 f:view should tokenize locale attribute
 * bug #1013489 support EL expression at <f:loadBundle>
 * Tiles support: ServletContextListener (JspTilesViewHandlerInitializer) no longer needed
+* outputText (and other components) needed to render a span-tag if they have a custom-set id
+* required HtmlInputFileUpload validates now correctly
+  (and shows a message) if submitted value exists and the value is empty
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.6 beta
