--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -7,6 +7,7 @@ Changes in Release 1.0.7 beta
 * new custom component: Stylesheet
 * new extended HtmlInputTextarea component (with user role support)
 * new Autoscroll feature (restores horizontal and vertical browser page scrolling)
+* new previousRowDataVar attribute in extended HtmlDataTable (see tld description)
 * Japanese translation
 * writeText method in default ResponseWriter now maps newlines to <br/> and
   successive spaces to &nbsp; entities
