fixed problems with nested UIData and HtmlDataTable components
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167218 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -9,6 +9,7 @@ Changes in Release 1.0.7 beta
 * new Autoscroll feature (restores horizontal and vertical browser page scrolling)
 * new previousRowDataVar attribute in extended HtmlDataTable (see tld description)
 * Japanese translation
+* fixed problems with nested UIData and HtmlDataTable components
 * writeText method in default ResponseWriter now maps newlines to <br/> and
   successive spaces to &nbsp; entities
 * corrected some problems with rowIndexVar and rowCountVar in HtmlDataList
