--- a/src/myfaces/javax/faces/Messages_ja.properties
+++ b/src/myfaces/javax/faces/Messages_ja.properties
@@ -116,3 +116,6 @@ net.sourceforge.myfaces.Creditcard.INVALID_detail ="{0}": \u6b63\u3057\u3044\u30
 
 net.sourceforge.myfaces.Regexpr.INVALID=\u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u30a8\u30e9\u30fc
 net.sourceforge.myfaces.Regexpr.INVALID_detail="{0}": \u5024\u304c\u4e0d\u6b63\u3067\u3059.
+
+net.sourceforge.myfaces.ticker.NOCONNECTION =@TODO_TRANSLATE: No Connection: 
+net.sourceforge.myfaces.ticker.NOCONNECTION_detail =@TODO_TRANSLATE: Maybe you are behind a firewall?
