--- a/src/myfaces/javax/faces/Messages_de.properties
+++ b/src/myfaces/javax/faces/Messages_de.properties
@@ -119,3 +119,6 @@ net.sourceforge.myfaces.Regexpr.INVALID_detail ="{0}": Eingegebener Wert ist ung
 
 net.sourceforge.myfaces.Date.INVALID = Validierungsfehler
 net.sourceforge.myfaces.Date.INVALID_detail ="{0}": Eingegebener Datum ist ungültig.
+
+net.sourceforge.myfaces.ticker.NOCONNECTION = Keine Verbindung zum Internet:
+net.sourceforge.myfaces.ticker.NOCONNECTION_detail = Eventuell befinden Sie sich hinter einer Firewall?
