--- a/src/myfaces/javax/faces/Messages_en.properties
+++ b/src/myfaces/javax/faces/Messages_en.properties
@@ -119,3 +119,6 @@ net.sourceforge.myfaces.Regexpr.INVALID_detail="{0}": Value is not valid.
 
 net.sourceforge.myfaces.Date.INVALID = Validation Error
 net.sourceforge.myfaces.Date.INVALID_detail ="{0}": Value is not a correct date
+
+net.sourceforge.myfaces.ticker.NOCONNECTION = No Connection: 
+net.sourceforge.myfaces.ticker.NOCONNECTION_detail = Maybe you are behind a firewall?
