--- a/src/myfaces/javax/faces/Messages_fr.properties
+++ b/src/myfaces/javax/faces/Messages_fr.properties
@@ -119,3 +119,6 @@ net.sourceforge.myfaces.Regexpr.INVALID_detail = "{0}": Valeur non valide.
 
 net.sourceforge.myfaces.Date.INVALID = Erreur de Validation
 net.sourceforge.myfaces.Date.INVALID_detail ="{0}": Date non valide.
+
+net.sourceforge.myfaces.ticker.NOCONNECTION =@TODO_TRANSLATE: No Connection: 
+net.sourceforge.myfaces.ticker.NOCONNECTION_detail =@TODO_TRANSLATE: Maybe you are behind a firewall?
