French translation update
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167222 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/javax/faces/Messages_fr.properties
+++ b/src/myfaces/javax/faces/Messages_fr.properties
@@ -120,5 +120,5 @@ net.sourceforge.myfaces.Regexpr.INVALID_detail = "{0}": Valeur non valide.
 net.sourceforge.myfaces.Date.INVALID = Erreur de Validation
 net.sourceforge.myfaces.Date.INVALID_detail ="{0}": Date non valide.
 
-net.sourceforge.myfaces.ticker.NOCONNECTION =@TODO_TRANSLATE: No Connection: 
-net.sourceforge.myfaces.ticker.NOCONNECTION_detail =@TODO_TRANSLATE: Maybe you are behind a firewall?
+net.sourceforge.myfaces.ticker.NOCONNECTION = Pas de connexion : 
+net.sourceforge.myfaces.ticker.NOCONNECTION_detail = Peut-être êtes-vous derrière un firewall ?
