--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -2,7 +2,7 @@ welcome = Bienvenue à
 today = Aujourd''hui, le {0,date,short}.
 
 
-nav_Home            = Page d'acceuil
+nav_Home            = Page d'accueil
 nav_Examples        = Exemples
 nav_Sample_1        = Exemple 1
 nav_Sample_2        = Exemple 2
