--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_ja.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_ja.properties
@@ -25,12 +25,14 @@ nav_Validate		= \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3
 nav_rssTicker		= RSS\u30c6\u30a3\u30c3\u30ab\u30fc
 nav_dataScroller    = \u30c7\u30fc\u30bf\u30b9\u30af\u30ed\u30fc\u30e9
 nav_Date			= \u65e5\u4ed8
+nav_panelstack      = \u30d1\u30cd\u30eb\u30b9\u30bf\u30c3\u30af
 # buttons
 
 button_save = \u4fdd\u5b58
 button_apply = \u9069\u7528
 button_cancel = \u30ad\u30e3\u30f3\u30bb\u30eb
 button_delete = \u524a\u9664
+button_submit = \u9001\u4fe1
 
 alt_logo = MyFaces - \u30aa\u30fc\u30d7\u30f3\u30bd\u30fc\u30b9JSF\u5b9f\u88c5
 
@@ -39,6 +41,22 @@ option_layout = \u30ec\u30a4\u30a2\u30a6\u30c8
 
 empty_selitem = \u9078\u629e\u3057\u3066\u304f\u3060\u3055\u3044
 
+# sample1
+
+sample1_form = \u30d5\u30a9\u30fc\u30e0
+sample1_another_form = \u5225\u306e\u30d5\u30a9\u30fc\u30e0\u4f8b
+sample1_validation = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3
+sample1_number = \u6570\u5b57
+sample1_add = \u548c\u3092\u8a08\u7b97
+sample1_sub = \u5dee\u3092\u8a08\u7b97
+sample1_add_link = \u3053\u306e\u30ea\u30f3\u30af\u3092\u30af\u30ea\u30c3\u30af\u3059\u308b\u3068\u548c\u3092\u8a08\u7b97
+sample1_sub_link = \u3053\u306e\u30ea\u30f3\u30af\u3092\u30af\u30ea\u30c3\u30af\u3059\u308b\u3068\u5dee\u3092\u8a08\u7b97
+sample1_result = \u7d50\u679c
+sample1_text = \u30c6\u30ad\u30b9\u30c8
+sample1_uppercase = \u5927\u6587\u5b57\u3078\u5909\u63db
+sample1_lowercase = \u5c0f\u6587\u5b57\u3078\u5909\u63db
+sample1_disable_validation = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u3092\u6709\u52b9\u306b\u3059\u308b
+sample1_enable_validation = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u3092\u7121\u52b9\u306b\u3059\u308b
 
 # components examples
 
@@ -68,6 +86,11 @@ sort_carcolor = \u8eca\u306e\u8272
 sales_tax = \u7a0e\u91d1
 doors = \u30c9\u30a2
 
+validate_email = \u30e1\u30fc\u30eb
+validate_credit = \u30af\u30ec\u30b8\u30c3\u30c8\u30ab\u30fc\u30c9
+validate_regexp = \u6b63\u898f\u8868\u73fe
+validate_equal = \u6587\u5b57\u5217\u306e\u30de\u30c3\u30c1
+
 label_country_name = \u56fd
 label_country_iso = ISO\u30b3\u30fc\u30c9
 label_country_cities = \u5e02\u753a\u6751
@@ -79,7 +102,7 @@ dataList_ul = \u756a\u53f7\u306a\u3057\u30ea\u30b9\u30c8
 dataList_ol = \u756a\u53f7\u4ed8\u304d\u30ea\u30b9\u30c8
 
 dataScroller_pages = \u30da\u30fc\u30b8 {0} / {1}
-date_comp_header= \u65e5\u4ed8\u5165\u529b\u30bf\u30b0
+date_comp_header = \u65e5\u4ed8\u5165\u529b\u30bf\u30b0
 date_comp_text1 = \u65e5\u4ed8\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 date_comp_text2 = \u65e5\u4ed8:
 date_comp_text3 = \u6642\u523b\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
@@ -89,3 +112,7 @@ date_comp_text6 = \u65e5\u4ed8\u3068\u6642\u9593:
 date_comp_button = \u66f4\u65b0
 popup_today_string = \u4eca\u65e5\u306f :
 popup_week_string = \u9031
+
+
+selectBoxPanel=\u30bb\u30ec\u30af\u30c8\u30dc\u30c3\u30af\u30b9\u30d1\u30cd\u30eb
+treePanel=\u30c4\u30ea\u30fc\u30d1\u30cd\u30eb
