--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -2,6 +2,10 @@ MyFaces Release Notes
 =====================
 
 ----------------------------------------------------------------------
+Changes in Release 1.0.8 beta
+* move to Apache Incubator (root package is now "org.apache.myfaces")
+
+----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
 * new custom component: HtmlPanelStack
 * new custom component: Stylesheet
