changed uri from sf.net to m.a.o and provided a second tld, that holds the 'old' tld as well
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167261 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -4,6 +4,8 @@ MyFaces Release Notes
 ----------------------------------------------------------------------
 Changes in Release 1.0.8 beta
 * move to Apache Incubator (root package is now "org.apache.myfaces")
+* providing a tld for MyFaces custom components, that still contains
+  the 'old' sf-URI name for backward compatibility
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
