--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -6,6 +6,7 @@ Changes in Release 1.0.8 beta
 * move to Apache Incubator (root package is now "org.apache.myfaces")
 * providing a tld for MyFaces custom components, that still contains
   the 'old' sf-URI name for backward compatibility
+* i18n support for Brazilian Portuguese; thanks to Rogerio Pereira
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
