Change the jar files scheme : 	- myfaces-jsf-api.jar contains the api classes (no change) 	- myfaces-impl.jar contains the standard jsf implementation, without the extensions (same as jsf-impl.jar from the RI) 	- myfaces-extensions.jar contains the myfaces extensions
	- myfaces.jar containes all the myfaces code, and can be used in place of the 3 above


git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167276 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -8,6 +8,11 @@ Changes in Release 1.0.8 beta
   the 'old' sf-URI name for backward compatibility
 * i18n support for Brazilian Portuguese; thanks to Rogerio Pereira
 * bug fix #1045363 New <br> and &nbsp; 'feature'
+* refactor the jar files :
+  - myfaces-jsf-api.jar contains the api classes (no change)
+  - myfaces-impl.jar contains the standard jsf implementation
+  - myfaces-extensions.jar contains the myfaces extensions
+  - myfaces.jar containes all the myfaces code, and can be used in place of the 3 above
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
 * new custom component: HtmlPanelStack
