Add an x:aliasBean component
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167287 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -13,6 +13,7 @@ Changes in Release 1.0.8 beta
   - myfaces-impl.jar contains the standard jsf implementation
   - myfaces-extensions.jar contains the myfaces extensions
   - myfaces.jar containes all the myfaces code, and can be used in place of the 3 above
+* add an x:aliasBean component
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
 * new custom component: HtmlPanelStack
