div renderer now puts the class/style in quotes
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167289 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -14,6 +14,7 @@ Changes in Release 1.0.8 beta
   - myfaces-extensions.jar contains the myfaces extensions
   - myfaces.jar containes all the myfaces code, and can be used in place of the 3 above
 * add an x:aliasBean component
+* add an x:div component
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
 * new custom component: HtmlPanelStack
