new popup - component; not yet finished
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167298 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
@@ -19,6 +19,7 @@ nav_Selectbox       = Boîtes de sélection
 nav_FileUpload      = Upload de fichier
 nav_TabbedPane      = Panneau à onglets
 nav_Calendar        = Calendrier
+nav_Popup           = Popup
 nav_dataList        = Listes dynamiques
 nav_tree            = Arbre
 nav_Validate		= Validations
