--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -19,6 +19,7 @@ nav_Selectbox       = Selectboxen
 nav_FileUpload      = Datei hochladen
 nav_TabbedPane      = Karteireiter
 nav_Calendar        = Kalender
+nav_Popup           = Popup
 nav_dataList        = Dynamische Listen
 nav_tree            = Baum
 nav_Validate		= Validierungen
