--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
@@ -19,6 +19,7 @@ nav_Selectbox       = \u30bb\u30ec\u30af\u30c8\u30dc\u30c3\u30af\u30b9
 nav_FileUpload      = \u30d5\u30a1\u30a4\u30eb\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 nav_TabbedPane      = \u30bf\u30d6\u30d1\u30cd\u30eb
 nav_Calendar        = \u30ab\u30ec\u30f3\u30c0\u30fc
+nav_Popup           = Popup
 nav_dataList        = \u30c0\u30a4\u30ca\u30df\u30c3\u30af\u30ea\u30b9\u30c8
 nav_tree            =\u30c4\u30ea\u30fc
 nav_Validate		= \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3
