added new validator for ISBN codes
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167301 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/javax/faces/Messages_de.properties
+++ b/src/myfaces/javax/faces/Messages_de.properties
@@ -122,3 +122,6 @@ org.apache.myfaces.Date.INVALID_detail ="{0}": Eingegebener Datum ist ungültig.
 
 org.apache.myfaces.ticker.NOCONNECTION = Keine Verbindung zum Internet:
 org.apache.myfaces.ticker.NOCONNECTION_detail = Eventuell befinden Sie sich hinter einer Firewall?
+
+org.apache.myfaces.ISBN.INVALID = Validierungsfehler
+org.apache.myfaces.ISBN.INVALID_detail ="{0}": Eingegebener Wert ist keine gültige ISBN-Nummer.
