--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -90,3 +90,9 @@ date_comp_text6=Datum und Uhrzeit:
 date_comp_button=Aktualisieren
 popup_today_string=Heute ist :
 popup_week_string=KW
+
+validate_email = Email
+validate_credit = Credit Card
+validate_regexp = Regular Expression
+validate_equal = Equal
+validate_isbn = ISBN
