--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
@@ -91,3 +91,9 @@ date_comp_text6=La date et l'heure sont :
 date_comp_button=Mise à jour
 popup_today_string=Aujourd'hui, le :
 popup_week_string=Sem.
+
+validate_email = Email
+validate_credit = Credit Card
+validate_regexp = Regular Expression
+validate_equal = Equal
+validate_isbn = ISBN
