--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
@@ -91,6 +91,8 @@ validate_email = \u30e1\u30fc\u30eb
 validate_credit = \u30af\u30ec\u30b8\u30c3\u30c8\u30ab\u30fc\u30c9
 validate_regexp = \u6b63\u898f\u8868\u73fe
 validate_equal = \u6587\u5b57\u5217\u306e\u30de\u30c3\u30c1
+validate_isbn = ISBN
+
 
 label_country_name = \u56fd
 label_country_iso = ISO\u30b3\u30fc\u30c9
