--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -15,6 +15,7 @@ Changes in Release 1.0.8 beta
   - myfaces.jar containes all the myfaces code, and can be used in place of the 3 above
 * add an x:aliasBean component
 * add an x:div component
+* add a validator for ISBN codes (<x:validateISBN/>)
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
 * new custom component: HtmlPanelStack
