--- a/src/myfaces/javax/faces/Messages_en.properties
+++ b/src/myfaces/javax/faces/Messages_en.properties
@@ -122,3 +122,6 @@ org.apache.myfaces.Date.INVALID_detail ="{0}": Value is not a correct date
 
 org.apache.myfaces.ticker.NOCONNECTION = No Connection: 
 org.apache.myfaces.ticker.NOCONNECTION_detail = Maybe you are behind a firewall?
+
+org.apache.myfaces.ISBN.INVALID = Validation Error
+org.apache.myfaces.ISBN.INVALID_detail ="{0}": Value is not a correct isbn code.
