--- a/src/myfaces/javax/faces/Messages_ja.properties
+++ b/src/myfaces/javax/faces/Messages_ja.properties
@@ -119,3 +119,6 @@ org.apache.myfaces.Regexpr.INVALID_detail="{0}": \u5024\u304c\u4e0d\u6b63\u3067\
 
 org.apache.myfaces.ticker.NOCONNECTION =@TODO_TRANSLATE: No Connection: 
 org.apache.myfaces.ticker.NOCONNECTION_detail =@TODO_TRANSLATE: Maybe you are behind a firewall?
+
+org.apache.myfaces.ISBN.INVALID = Validation Error_TRANSLATE_ME
+org.apache.myfaces.ISBN.INVALID_detail ="{0}": Value is not a correct isbn code._TRANSLATE_ME
