--- a/src/myfaces/javax/faces/Messages_pt_BR.properties
+++ b/src/myfaces/javax/faces/Messages_pt_BR.properties
@@ -122,3 +122,6 @@ org.apache.myfaces.Date.INVALID_detail ="{0}": O valor não é uma data correta
 
 org.apache.myfaces.ticker.NOCONNECTION = Sem conexão: 
 org.apache.myfaces.ticker.NOCONNECTION_detail = Talvez você esteja atrás de um firewall?
+
+org.apache.myfaces.ISBN.INVALID = Validation Error_TRANSLATE_ME
+org.apache.myfaces.ISBN.INVALID_detail ="{0}": Value is not a correct isbn code._TRANSLATE_ME
