--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -26,6 +26,7 @@ nav_Validate		= Validierungen
 nav_rssTicker		= RssTicker
 nav_dataScroller    = DataScroller
 nav_Date			= Datum
+nav_css             = Stylesheet
 
 # buttons
 
