--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
@@ -26,6 +26,7 @@ nav_Validate		= Validations
 nav_rdfTicker		= Ticker Rdf
 nva_dataScroller    = DataScroller
 nav_Date			= TODO: Translate Date
+nav_css             = Stylesheet
 
 
 # buttons
