--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
@@ -27,6 +27,7 @@ nav_rssTicker		= RSS\u30c6\u30a3\u30c3\u30ab\u30fc
 nav_dataScroller    = \u30c7\u30fc\u30bf\u30b9\u30af\u30ed\u30fc\u30e9
 nav_Date			= \u65e5\u4ed8
 nav_panelstack      = \u30d1\u30cd\u30eb\u30b9\u30bf\u30c3\u30af
+nav_css             = Stylesheet
 # buttons
 
 button_save = \u4fdd\u5b58
