--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
@@ -19,7 +19,7 @@ nav_Selectbox       = \u30bb\u30ec\u30af\u30c8\u30dc\u30c3\u30af\u30b9
 nav_FileUpload      = \u30d5\u30a1\u30a4\u30eb\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 nav_TabbedPane      = \u30bf\u30d6\u30d1\u30cd\u30eb
 nav_Calendar        = \u30ab\u30ec\u30f3\u30c0\u30fc
-nav_Popup           = Popup
+nav_Popup           = \u30dd\u30c3\u30d7\u30a2\u30c3\u30d7
 nav_dataList        = \u30c0\u30a4\u30ca\u30df\u30c3\u30af\u30ea\u30b9\u30c8
 nav_tree            =\u30c4\u30ea\u30fc
 nav_Validate		= \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3
@@ -27,7 +27,6 @@ nav_rssTicker		= RSS\u30c6\u30a3\u30c3\u30ab\u30fc
 nav_dataScroller    = \u30c7\u30fc\u30bf\u30b9\u30af\u30ed\u30fc\u30e9
 nav_Date			= \u65e5\u4ed8
 nav_panelstack      = \u30d1\u30cd\u30eb\u30b9\u30bf\u30c3\u30af
-nav_css             = Stylesheet
 # buttons
 
 button_save = \u4fdd\u5b58
@@ -59,6 +58,13 @@ sample1_uppercase = \u5927\u6587\u5b57\u3078\u5909\u63db
 sample1_lowercase = \u5c0f\u6587\u5b57\u3078\u5909\u63db
 sample1_disable_validation = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u3092\u6709\u52b9\u306b\u3059\u308b
 sample1_enable_validation = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u3092\u7121\u52b9\u306b\u3059\u308b
+
+# sample2
+
+sample2_add_quote = \u5f15\u7528\u7b26\u8ffd\u52a0
+sample2_remove_quote = \u5f15\u7528\u7b26\u524a\u9664
+sample2_select_quote = \u5f15\u7528\u7b26\u306e\u9078\u629e
+sample2_select_unquote = \u524a\u9664\u3059\u308b\u5f15\u7528\u7b26\u3092\u9078\u629e
 
 # components examples
 
@@ -120,3 +126,26 @@ popup_week_string = \u9031
 
 selectBoxPanel=\u30bb\u30ec\u30af\u30c8\u30dc\u30c3\u30af\u30b9\u30d1\u30cd\u30eb
 treePanel=\u30c4\u30ea\u30fc\u30d1\u30cd\u30eb
+
+fileupload_title=\u30d5\u30a1\u30a4\u30eb\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
+fileupload_gimmeimage=\u753b\u50cf\u30d5\u30a1\u30a4\u30eb:
+fileupload_name=\u540d\u524d: 
+fileupload_button=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
+fileupload_msg1=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u305f\u753b\u50cf:
+fileupload_msg2=\u753b\u50cf\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3059\u308b\u30ea\u30f3\u30af:
+fileupload_msg3=\u753b\u50cf\u306e\u30ea\u30f3\u30af\u3092\u76f4\u63a5\u8868\u793a:
+fileupload_dlimg=\u753b\u50cf\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9
+
+tabbed_tab1=\u30bf\u30d61
+tabbed_tab2=\u30bf\u30d62
+tabbed_tab3=\u30bf\u30d63
+
+tabbed_visible1=\u30bf\u30d61\u8868\u793a
+tabbed_visible2=\u30bf\u30d62\u8868\u793a
+tabbed_visible3=\u30bf\u30d63\u8868\u793a
+tabbed_submit=\u5171\u901a\u306e\u9001\u4fe1\u30dc\u30bf\u30f3
+tabbed_common=\u5171\u901a\u306e\u30d1\u30e9\u30b0\u30e9\u30d5
+
+js_popup=JavaScript\u3067\u30dd\u30c3\u30d7\u30a2\u30c3\u30d7\u3059\u308b\u30ab\u30ec\u30f3\u30c0\u30fc
+js_form=\u30d5\u30a9\u30fc\u30e0\u306e\u30ab\u30ec\u30f3\u30c0\u30fc
+js_submit=\u9001\u4fe1
