--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
@@ -6,6 +6,7 @@ nav_Home            = \u30db\u30fc\u30e0
 nav_Examples        = \u30b5\u30f3\u30d7\u30eb
 nav_Sample_1        = \u30b5\u30f3\u30d7\u30eb 1
 nav_Sample_2        = \u30b5\u30f3\u30d7\u30eb 2
+nav_aliasBean       = \u30a8\u30a4\u30ea\u30a2\u30b9\u30d3\u30fc\u30f3
 nav_dataTable       = \u30c7\u30fc\u30bf\u30c6\u30fc\u30d6\u30eb
 nav_sortTable       = \u30bd\u30fc\u30c8\u6e08\u307f\u30c6\u30fc\u30d6\u30eb
 nav_Documentation   = \u30c9\u30ad\u30e5\u30e1\u30f3\u30c8
@@ -27,6 +28,7 @@ nav_rssTicker		= RSS\u30c6\u30a3\u30c3\u30ab\u30fc
 nav_dataScroller    = \u30c7\u30fc\u30bf\u30b9\u30af\u30ed\u30fc\u30e9
 nav_Date			= \u65e5\u4ed8
 nav_panelstack      = \u30d1\u30cd\u30eb\u30b9\u30bf\u30c3\u30af
+nav_css             = \u30b9\u30bf\u30a4\u30eb\u30b7\u30fc\u30c8
 # buttons
 
 button_save = \u4fdd\u5b58
@@ -149,3 +151,5 @@ tabbed_common=\u5171\u901a\u306e\u30d1\u30e9\u30b0\u30e9\u30d5
 js_popup=JavaScript\u3067\u30dd\u30c3\u30d7\u30a2\u30c3\u30d7\u3059\u308b\u30ab\u30ec\u30f3\u30c0\u30fc
 js_form=\u30d5\u30a9\u30fc\u30e0\u306e\u30ab\u30ec\u30f3\u30c0\u30fc
 js_submit=\u9001\u4fe1
+
+css_msg=\u6b21\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306e\u7c21\u5358\u306a\u30c6\u30b9\u30c8\u3067\u3059:
