MYFACES-8: tree table patch
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167321 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -16,6 +16,7 @@ Changes in Release 1.0.8 beta
 * add an x:aliasBean component
 * add an x:div component
 * add a validator for ISBN codes (<x:validateISBN/>)
+* new tree table feature contributed by David Le Strat (MYFACES-8)
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
 * new custom component: HtmlPanelStack
