--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
@@ -25,7 +25,7 @@ nav_tree            = Arbre
 nav_Validate		= Validations
 nav_rdfTicker		= Ticker Rdf
 nva_dataScroller    = DataScroller
-nav_Date			= TODO: Translate Date
+nav_Date			= Date
 nav_css             = Stylesheet
 
 
