--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -6,6 +6,7 @@ nav_Home            = Startseite
 nav_Examples        = Beispiele
 nav_Sample_1        = Beispiel 1
 nav_Sample_2        = Beispiel 2
+nav_aliasBean		= AliasBean
 nav_dataTable       = Master/Detail Beispiel
 nav_sortTable       = Sortierbare Tabelle
 nav_Documentation   = Dokumentation
