--- a/src/myfaces/javax/faces/Messages_ja.properties
+++ b/src/myfaces/javax/faces/Messages_ja.properties
@@ -117,8 +117,8 @@ org.apache.myfaces.Creditcard.INVALID_detail ="{0}": \u6b63\u3057\u3044\u30af\u3
 org.apache.myfaces.Regexpr.INVALID=\u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u30a8\u30e9\u30fc
 org.apache.myfaces.Regexpr.INVALID_detail="{0}": \u5024\u304c\u4e0d\u6b63\u3067\u3059.
 
-org.apache.myfaces.ticker.NOCONNECTION =@TODO_TRANSLATE: No Connection: 
-org.apache.myfaces.ticker.NOCONNECTION_detail =@TODO_TRANSLATE: Maybe you are behind a firewall?
+org.apache.myfaces.ticker.NOCONNECTION = \u63a5\u7d9a\u3067\u304d\u307e\u305b\u3093.
+org.apache.myfaces.ticker.NOCONNECTION_detail = \u30d5\u30a1\u30a4\u3084\u30a6\u30a9\u30fc\u30eb\u306e\u5185\u5074\u304b\u3089\u30a2\u30af\u30bb\u30b9\u3057\u3066\u3044\u307e\u305b\u3093\u304b?
 
-org.apache.myfaces.ISBN.INVALID = Validation Error_TRANSLATE_ME
-org.apache.myfaces.ISBN.INVALID_detail ="{0}": Value is not a correct isbn code._TRANSLATE_ME
+org.apache.myfaces.ISBN.INVALID = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u30a8\u30e9\u30fc
+org.apache.myfaces.ISBN.INVALID_detail ="{0}": \u5165\u529b\u3055\u308c\u305fISBN\u30b3\u30fc\u30c9\u304c\u6b63\u3057\u304f\u3042\u308a\u307e\u305b\u3093.
