--- a/src/myfaces/javax/faces/Messages_fr.properties
+++ b/src/myfaces/javax/faces/Messages_fr.properties
@@ -123,5 +123,5 @@ org.apache.myfaces.Date.INVALID_detail ="{0}": Date non valide.
 org.apache.myfaces.ticker.NOCONNECTION = Pas de connexion : 
 org.apache.myfaces.ticker.NOCONNECTION_detail = Peut-être êtes-vous derrière un firewall ?
 
-org.apache.myfaces.ISBN.INVALID = Validation Error_TRANSLATE_ME
-org.apache.myfaces.ISBN.INVALID_detail ="{0}": Value is not a correct isbn code._TRANSLATE_ME
+org.apache.myfaces.ISBN.INVALID = Erreur de Validation
+org.apache.myfaces.ISBN.INVALID_detail ="{0}": La valeur n'est pas un numéro ISBN
