closed issues in Jira (MYFACES-17,18,36(newspaperTable)) thanks to Heath Borders(17,18) and Jesse Wilson(36)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167340 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
@@ -27,7 +27,7 @@ nav_rdfTicker		= Ticker Rdf
 nva_dataScroller    = DataScroller
 nav_Date			= Date
 nav_css             = Stylesheet
-
+nav_newspaperTable  = Newspaper Table
 
 # buttons
 
