--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_pt_BR.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_pt_BR.properties
@@ -30,6 +30,8 @@ nav_dataScroller    = DataScroller
 nav_Date			= Data
 nav_panelstack      = Panel Stack
 nav_css             = Stylesheet
+nav_newspaperTable  = Newspaper Table
+
 # buttons
 
 button_save = Gravar
