--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -28,6 +28,7 @@ nav_rssTicker		= RssTicker
 nav_dataScroller    = DataScroller
 nav_Date			= Datum
 nav_css             = Stylesheet
+nav_newspaperTable  = Newspaper Table
 
 # buttons
 
