--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
@@ -29,6 +29,8 @@ nav_dataScroller    = \u30c7\u30fc\u30bf\u30b9\u30af\u30ed\u30fc\u30e9
 nav_Date			= \u65e5\u4ed8
 nav_panelstack      = \u30d1\u30cd\u30eb\u30b9\u30bf\u30c3\u30af
 nav_css             = \u30b9\u30bf\u30a4\u30eb\u30b7\u30fc\u30c8
+nav_newspaperTable  = Newspaper Table
+
 # buttons
 
 button_save = \u4fdd\u5b58
