changes i18n-messages for validation
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167342 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/javax/faces/Messages_de.properties
+++ b/src/myfaces/javax/faces/Messages_de.properties
@@ -106,22 +106,22 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": Der eingegebene We
 
 org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 org.apache.myfaces.Email.INVALID = Validierungsfehler
-org.apache.myfaces.Email.INVALID_detail ="{0}": Eingegebener Wert ist keine gültige Emailadresse.
+org.apache.myfaces.Email.INVALID_detail =Der eingegebene Wert ({0}) ist keine korrekte E-Mail-Adress.
 
 org.apache.myfaces.Equal.INVALID = Validierungsfehler
-org.apache.myfaces.Equal.INVALID_detail ="{0}": Eingegebener Wert ist nicht identisch mit dem des Feldes "{1}".
+org.apache.myfaces.Equal.INVALID_detail =Der eingegebene Wert ({0}) stimmt nicht mit dem Wert "{1}" überein.
 
 org.apache.myfaces.Creditcard.INVALID = Validierungsfehler
-org.apache.myfaces.Creditcard.INVALID_detail ="{0}": Eingegebener Wert ist keine gültige Kreditkartenummer
+org.apache.myfaces.Creditcard.INVALID_detail =Der eingegebene Wert ({0}) ist keine korrekte Kreditkarten Nummer.
 
-org.apache.myfaces.Regexpr.INVALID = Validierungsfehler
-org.apache.myfaces.Regexpr.INVALID_detail ="{0}": Eingegebener Wert ist ungültig.
+org.apache.myfaces.Regexpr.INVALID=Validierungsfehler
+org.apache.myfaces.Regexpr.INVALID_detail=Der eingegebene Wert ({0}) ist nicht korrekt.
 
 org.apache.myfaces.Date.INVALID = Validierungsfehler
-org.apache.myfaces.Date.INVALID_detail ="{0}": Eingegebener Datum ist ungültig.
+org.apache.myfaces.Date.INVALID_detail =Der eingegebene Wert ({0}) ist kein korrektes Datum.
 
-org.apache.myfaces.ticker.NOCONNECTION = Keine Verbindung zum Internet:
-org.apache.myfaces.ticker.NOCONNECTION_detail = Eventuell befinden Sie sich hinter einer Firewall?
+org.apache.myfaces.ticker.NOCONNECTION = Keine Verbindung: 
+org.apache.myfaces.ticker.NOCONNECTION_detail = Sind Sie hinter einer Firewall?
 
 org.apache.myfaces.ISBN.INVALID = Validierungsfehler
-org.apache.myfaces.ISBN.INVALID_detail ="{0}": Eingegebener Wert ist keine gültige ISBN-Nummer.
+org.apache.myfaces.ISBN.INVALID_detail =Der eingegebene Wert ({0}) ist keine korrekte ISBN  Nummer.
