--- a/src/myfaces/javax/faces/Messages_pt_BR.properties
+++ b/src/myfaces/javax/faces/Messages_pt_BR.properties
@@ -106,22 +106,22 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": O valor especifica
 
 org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 org.apache.myfaces.Email.INVALID = Erro de validação
-org.apache.myfaces.Email.INVALID_detail ="{0}": O valor não é um endereço de e-mail correto.
+org.apache.myfaces.Email.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct email-address.
 
 org.apache.myfaces.Equal.INVALID = Erro de validação
-org.apache.myfaces.Equal.INVALID_detail ="{0}": O valor não é igual ao valor de "{1}".
+org.apache.myfaces.Equal.INVALID_detail =TRANSLATE__The given value ({0}) is not equal with value of "{1}".
 
 org.apache.myfaces.Creditcard.INVALID = Erro de validação
-org.apache.myfaces.Creditcard.INVALID_detail ="{0}": O valor não é um número correto de cartão
+org.apache.myfaces.Creditcard.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct creditcard
 
-org.apache.myfaces.Regexpr.INVALID = Erro de validação
-org.apache.myfaces.Regexpr.INVALID_detail="{0}": O valor não é válido.
+org.apache.myfaces.Regexpr.INVALID=Erro de validação
+org.apache.myfaces.Regexpr.INVALID_detail=TRANSLATE__The given value ({0}) is not valid.
 
 org.apache.myfaces.Date.INVALID = Erro de validação
-org.apache.myfaces.Date.INVALID_detail ="{0}": O valor não é uma data correta
+org.apache.myfaces.Date.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct date
 
 org.apache.myfaces.ticker.NOCONNECTION = Sem conexão: 
 org.apache.myfaces.ticker.NOCONNECTION_detail = Talvez você esteja atrás de um firewall?
 
-org.apache.myfaces.ISBN.INVALID = Erro de validação
-org.apache.myfaces.ISBN.INVALID_detail ="{0}": O valor não é um código isbn válido.
+org.apache.myfaces.ISBN.INVALID =Erro de validação
+org.apache.myfaces.ISBN.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct isbn code.
