--- a/src/myfaces/javax/faces/Messages.properties
+++ b/src/myfaces/javax/faces/Messages.properties
@@ -106,22 +106,22 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": Specified value is
 
 org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 org.apache.myfaces.Email.INVALID = Validation Error
-org.apache.myfaces.Email.INVALID_detail ="{0}": Value is not a correct email-address.
+org.apache.myfaces.Email.INVALID_detail =The given value ({0}) is not a correct email-address.
 
 org.apache.myfaces.Equal.INVALID = Validation Error
-org.apache.myfaces.Equal.INVALID_detail ="{0}": Value is not equal with value of "{1}".
+org.apache.myfaces.Equal.INVALID_detail =The given value ({0}) is not equal with value of "{1}".
 
 org.apache.myfaces.Creditcard.INVALID = Validation Error
-org.apache.myfaces.Creditcard.INVALID_detail ="{0}": Value is not a correct creditcard
+org.apache.myfaces.Creditcard.INVALID_detail =The given value ({0}) is not a correct creditcard
 
 org.apache.myfaces.Regexpr.INVALID=Validation Error
-org.apache.myfaces.Regexpr.INVALID_detail="{0}": Value is not valid.
+org.apache.myfaces.Regexpr.INVALID_detail=The given value ({0}) is not valid.
 
 org.apache.myfaces.Date.INVALID = Validation Error
-org.apache.myfaces.Date.INVALID_detail ="{0}": Value is not a correct date
+org.apache.myfaces.Date.INVALID_detail =The given value ({0}) is not a correct date
 
 org.apache.myfaces.ticker.NOCONNECTION = No Connection: 
 org.apache.myfaces.ticker.NOCONNECTION_detail = Maybe you are behind a firewall?
 
 org.apache.myfaces.ISBN.INVALID = Validation Error
-org.apache.myfaces.ISBN.INVALID_detail ="{0}": Value is not a correct isbn code.
+org.apache.myfaces.ISBN.INVALID_detail =The given value ({0}) is not a correct isbn code.
