--- a/src/myfaces/javax/faces/Messages_fr.properties
+++ b/src/myfaces/javax/faces/Messages_fr.properties
@@ -106,22 +106,22 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": La donnée n''est p
 
 org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 org.apache.myfaces.Email.INVALID = Erreur de Validation
-org.apache.myfaces.Email.INVALID_detail = "{0}": Cette valeur n'est pas une adresse email correcte.
+org.apache.myfaces.Email.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct email-address.
 
 org.apache.myfaces.Equal.INVALID = Erreur de Validation
-org.apache.myfaces.Equal.INVALID_detail ="{0}": Cette valeur n'est pas égale à "{1}".
+org.apache.myfaces.Equal.INVALID_detail =TRANSLATE__The given value ({0}) is not equal with value of "{1}".
 
 org.apache.myfaces.Creditcard.INVALID = Erreur de Validation
-org.apache.myfaces.Creditcard.INVALID_detail = "{0}": Cette valeur n'est pas un numéro de carte de crédit correcte.
+org.apache.myfaces.Creditcard.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct creditcard
 
-org.apache.myfaces.Regexpr.INVALID = Erreur de Validation
-org.apache.myfaces.Regexpr.INVALID_detail = "{0}": Valeur non valide.
+org.apache.myfaces.Regexpr.INVALID=Erreur de Validation
+org.apache.myfaces.Regexpr.INVALID_detail=TRANSLATE__The given value ({0}) is not valid.
 
 org.apache.myfaces.Date.INVALID = Erreur de Validation
-org.apache.myfaces.Date.INVALID_detail ="{0}": Date non valide.
+org.apache.myfaces.Date.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct date
 
 org.apache.myfaces.ticker.NOCONNECTION = Pas de connexion : 
-org.apache.myfaces.ticker.NOCONNECTION_detail = Peut-être êtes-vous derrière un firewall ?
+org.apache.myfaces.ticker.NOCONNECTION_detail = Peut-être êtes-vous derrière un firewall 
 
 org.apache.myfaces.ISBN.INVALID = Erreur de Validation
-org.apache.myfaces.ISBN.INVALID_detail ="{0}": La valeur n'est pas un numéro ISBN
+org.apache.myfaces.ISBN.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct isbn code.
