--- a/src/myfaces/javax/faces/Messages_it.properties
+++ b/src/myfaces/javax/faces/Messages_it.properties
@@ -106,22 +106,22 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": Il valore specific
 
 org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 org.apache.myfaces.Email.INVALID = Errore di convalida
-org.apache.myfaces.Email.INVALID_detail ="{0}": Il valore non è un indirizzo email valido.
+org.apache.myfaces.Email.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct email-address.
 
 org.apache.myfaces.Equal.INVALID = Errore di convalida
-org.apache.myfaces.Equal.INVALID_detail ="{0}": Il valore non è uguale a "{1}".
+org.apache.myfaces.Equal.INVALID_detail =TRANSLATE__The given value ({0}) is not equal with value of "{1}".
 
 org.apache.myfaces.Creditcard.INVALID = Errore di convalida
-org.apache.myfaces.Creditcard.INVALID_detail ="{0}": Il valore non è un numero di carta di credito corretto
+org.apache.myfaces.Creditcard.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct creditcard
 
 org.apache.myfaces.Regexpr.INVALID=Errore di convalida
-org.apache.myfaces.Regexpr.INVALID_detail="{0}": Il valore non è valido.
+org.apache.myfaces.Regexpr.INVALID_detail=TRANSLATE__The given value ({0}) is not valid.
 
 org.apache.myfaces.Date.INVALID = Errore di convalida
-org.apache.myfaces.Date.INVALID_detail ="{0}": Il valore non è una data corretta
+org.apache.myfaces.Date.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct date
 
 org.apache.myfaces.ticker.NOCONNECTION = Nessuna connessione: 
 org.apache.myfaces.ticker.NOCONNECTION_detail = Forse si è dietro ad un firewall ?
 
-org.apache.myfaces.ISBN.INVALID = Errore di convalida
-org.apache.myfaces.ISBN.INVALID_detail ="{0}": Il valore non è un codice ISBN corretto.
+org.apache.myfaces.ISBN.INVALID =Errore di convalida
+org.apache.myfaces.ISBN.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct isbn code.
