--- a/src/myfaces/javax/faces/Messages_ja.properties
+++ b/src/myfaces/javax/faces/Messages_ja.properties
@@ -106,19 +106,22 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": \u6b63\u3057\u3044
 
 org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 org.apache.myfaces.Email.INVALID = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u30a8\u30e9\u30fc
-org.apache.myfaces.Email.INVALID_detail ="{0}": \u6b63\u3057\u3044\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u3092\u5165\u529b\u3057\u3066\u4e0b\u3055\u3044.
+org.apache.myfaces.Email.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct email-address.
 
 org.apache.myfaces.Equal.INVALID = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u30a8\u30e9\u30fc
-org.apache.myfaces.Equal.INVALID_detail ="{0}": \u5024\u304c"{1}"\u3068\u7b49\u3057\u304f\u3042\u308a\u307e\u305b\u3093.
+org.apache.myfaces.Equal.INVALID_detail =TRANSLATE__The given value ({0}) is not equal with value of "{1}".
 
 org.apache.myfaces.Creditcard.INVALID = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u30a8\u30e9\u30fc
-org.apache.myfaces.Creditcard.INVALID_detail ="{0}": \u6b63\u3057\u3044\u30af\u30ec\u30b8\u30c3\u30c8\u30ab\u30fc\u30c9\u756a\u53f7\u3092\u5165\u529b\u3057\u3066\u4e0b\u3055\u3044.
+org.apache.myfaces.Creditcard.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct creditcard
 
 org.apache.myfaces.Regexpr.INVALID=\u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u30a8\u30e9\u30fc
-org.apache.myfaces.Regexpr.INVALID_detail="{0}": \u5024\u304c\u4e0d\u6b63\u3067\u3059.
+org.apache.myfaces.Regexpr.INVALID_detail=TRANSLATE__The given value ({0}) is not valid.
+
+org.apache.myfaces.Date.INVALID = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u30a8\u30e9\u30fc
+org.apache.myfaces.Date.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct date
 
 org.apache.myfaces.ticker.NOCONNECTION = \u63a5\u7d9a\u3067\u304d\u307e\u305b\u3093.
 org.apache.myfaces.ticker.NOCONNECTION_detail = \u30d5\u30a1\u30a4\u3084\u30a6\u30a9\u30fc\u30eb\u306e\u5185\u5074\u304b\u3089\u30a2\u30af\u30bb\u30b9\u3057\u3066\u3044\u307e\u305b\u3093\u304b?
 
 org.apache.myfaces.ISBN.INVALID = \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3\u30a8\u30e9\u30fc
-org.apache.myfaces.ISBN.INVALID_detail ="{0}": \u5165\u529b\u3055\u308c\u305fISBN\u30b3\u30fc\u30c9\u304c\u6b63\u3057\u304f\u3042\u308a\u307e\u305b\u3093.
+org.apache.myfaces.ISBN.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct isbn code.
