*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167350 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -19,6 +19,9 @@ Changes in Release 1.0.8 beta
 * add an x:div component
 * add a validator for ISBN codes (<x:validateISBN/>)
 * new tree table feature contributed by David Le Strat (MYFACES-8)
+* new ExtensionsFilter, replacing the MultipartFilter, and allowing embeded resources in the jar
+* popup component now uses embeded resources
+* calendar component now uses embeded resources
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
 * new custom component: HtmlPanelStack
