--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -22,6 +22,7 @@ Changes in Release 1.0.8 beta
 * new ExtensionsFilter, replacing the MultipartFilter, and allowing embeded resources in the jar
 * popup component now uses embeded resources
 * calendar component now uses embeded resources
+* new HTML Editor component (<x:htmlEditor>). Basically, it's an rich text WYSIWYG component.
 ----------------------------------------------------------------------
 Changes in Release 1.0.7 beta
 * new custom component: HtmlPanelStack
