--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -11,6 +11,7 @@ Changes in Release 1.0.8 beta
 * bug fix MYFACES-9: store iconChildMiddle in component state
 * bug fix #1006636 VisibleOnUserRole attribute for x:panelTab tag
 * bug fix #1049792 rendered attribute is disabled for commandNavigation
+* bug fix #1042890 HtmlNavigationRenderer renders separator for parameters
 * refactor the jar files :
   - myfaces-jsf-api.jar contains the api classes (no change)
   - myfaces-impl.jar contains the standard jsf implementation
