--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
@@ -87,7 +87,7 @@ date_comp_text1=Entrez une date
 date_comp_text2=La date est :
 date_comp_text3=Entrez une heure
 date_comp_text4=L'heure est
-date_comp_text5=Entre la date et l'heure
+date_comp_text5=Entrez la date et l'heure
 date_comp_text6=La date et l'heure sont :
 date_comp_button=Mise à jour
 popup_today_string=Aujourd'hui, le :
