Jira MYFACES-48: Tree Table Component Fixes & Tree Checkbox Support
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167442 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
@@ -22,6 +22,7 @@ nav_Calendar        = Calendrier
 nav_Popup           = Popup
 nav_dataList        = Listes dynamiques
 nav_tree            = Arbre
+nav_treeTable       = Arbre Table
 nav_Validate		= Validations
 nav_rdfTicker		= Ticker Rdf
 nva_dataScroller    = DataScroller
