--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
@@ -23,6 +23,7 @@ nav_Calendar        = \u30ab\u30ec\u30f3\u30c0\u30fc
 nav_Popup           = \u30dd\u30c3\u30d7\u30a2\u30c3\u30d7
 nav_dataList        = \u30c0\u30a4\u30ca\u30df\u30c3\u30af\u30ea\u30b9\u30c8
 nav_tree            =\u30c4\u30ea\u30fc
+nav_treeTable       = Tree Table
 nav_Validate		= \u30d0\u30ea\u30c7\u30fc\u30b7\u30e7\u30f3
 nav_rssTicker		= RSS\u30c6\u30a3\u30c3\u30ab\u30fc
 nav_dataScroller    = \u30c7\u30fc\u30bf\u30b9\u30af\u30ed\u30fc\u30e9
@@ -133,7 +134,7 @@ treePanel=\u30c4\u30ea\u30fc\u30d1\u30cd\u30eb
 
 fileupload_title=\u30d5\u30a1\u30a4\u30eb\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 fileupload_gimmeimage=\u753b\u50cf\u30d5\u30a1\u30a4\u30eb:
-fileupload_name=\u540d\u524d: 
+fileupload_name=\u540d\u524d:
 fileupload_button=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9
 fileupload_msg1=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3055\u308c\u305f\u753b\u50cf:
 fileupload_msg2=\u753b\u50cf\u3092\u30c0\u30a6\u30f3\u30ed\u30fc\u30c9\u3059\u308b\u30ea\u30f3\u30af:
@@ -155,3 +156,5 @@ js_form=\u30d5\u30a9\u30fc\u30e0\u306e\u30ab\u30ec\u30f3\u30c0\u30fc
 js_submit=\u9001\u4fe1
 
 css_msg=\u6b21\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306e\u7c21\u5358\u306a\u30c6\u30b9\u30c8\u3067\u3059:
+
+
