--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -23,6 +23,7 @@ nav_Calendar        = Kalender
 nav_Popup           = Popup
 nav_dataList        = Dynamische Listen
 nav_tree            = Baum
+nav_treeTable       = Baum Tabelle
 nav_Validate		= Validierungen
 nav_rssTicker		= RssTicker
 nav_dataScroller    = DataScroller
