bug fix examples webapp libraries for tomcat version > 5.5
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167478 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -3,9 +3,10 @@ MyFaces Release Notes
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.8 beta_RC2
-* added a new RenderKit, that renders WML. Thanks to Jirí Žaloudek for his contribution
+* added a new RenderKit, that renders WML. Thanks to Jirï¿½ ï¿½aloudek for his contribution
 * upgrade the components use the ExtensionsFilter
   this means you don't need to include the myfaces javascripts and style sheets in your app anymore.
+* bug fix examples webapp libraries for tomcat version > 5.5
 ----------------------------------------------------------------------
 Changes in Release 1.0.8 beta_RC1
 * move to Apache Incubator (root package is now "org.apache.myfaces")
