dataScroller, add rowsCountVar, displayedRowsCountVar, firstRowIndexVar and lastRowIndexVar attributes.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167491 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -83,7 +83,7 @@ dataList_simple = Einfache Liste
 dataList_ul = Unsortierte Liste
 dataList_ol = Nummerierte Liste
 
-dataScroller_pages = Seite {0} / {1}
+dataScroller_pages = {0} Autos gefunden, zeigend {1} Autos, von {2} bis {3}. Seite {4} / {5}
 date_comp_header=Datumskomponente
 date_comp_text1=Geben Sie ein Datum an
 date_comp_text2=Das Datum ist:
