--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_pt_BR.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_pt_BR.properties
@@ -115,7 +115,7 @@ dataList_simple = Lista simples
 dataList_ul = Lista desordenada
 dataList_ol = Lista ordenada
 
-dataScroller_pages = Página {0} / {1}
+dataScroller_pages = TRANSLATE {0} Cars found, displaying {1} cars, from {2} to {3}. Página {4} / {5}
 date_comp_header=Tag de entrada de dara
 date_comp_text1=Dê-me uma data
 date_comp_text2=A data é:
