--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
@@ -82,7 +82,7 @@ dataList_simple = Liste simple
 dataList_ul = Liste non ordonnée
 dataList_ol = Liste ordonnée
 
-dataScroller_pages = Page {0} / {1}
+dataScroller_pages = {0} Voitures trouvées, {1} voitures affichées, de {2} à {3}. Page {4} / {5}
 date_comp_header=Tag input Date
 date_comp_text1=Entrez une date
 date_comp_text2=La date est :
