--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
@@ -116,7 +116,7 @@ dataList_simple = \u30b7\u30f3\u30d7\u30eb\u30ea\u30b9\u30c8
 dataList_ul = \u756a\u53f7\u306a\u3057\u30ea\u30b9\u30c8
 dataList_ol = \u756a\u53f7\u4ed8\u304d\u30ea\u30b9\u30c8
 
-dataScroller_pages = \u30da\u30fc\u30b8 {0} / {1}
+dataScroller_pages = TRANSLATE {0} Cars found, displaying {1} cars, from {2} to {3}. Page {4} / {5}
 date_comp_header = \u65e5\u4ed8\u5165\u529b\u30bf\u30b0
 date_comp_text1 = \u65e5\u4ed8\u3092\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
 date_comp_text2 = \u65e5\u4ed8:
