--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ca.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ca.properties
@@ -116,7 +116,7 @@ dataList_simple = Llista simple
 dataList_ul = Llista no ordenada
 dataList_ol = Llista ordenada
 
-dataScroller_pages = TRANSLATE {0} Cars found, displaying {1} cars, from {2} to {3}. Página {4} / {5}
+dataScroller_pages = {0} Cotxes trobats, mostrant {1} cotxes, des de {2} a {3}. Pàgina {4} / {5}
 date_comp_header=Etiqueta input de Data
 date_comp_text1=Dona'm una data
 date_comp_text2=La data és:
