--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_es.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_es.properties
@@ -116,7 +116,7 @@ dataList_simple = Lista simple
 dataList_ul = Lista no ordenada
 dataList_ol = Lista ordenada
 
-dataScroller_pages = {0} Coches encontradas, {1} coches listadas, de {2} a {3}. Página {4} / {5}
+dataScroller_pages = {0} Coches encontrados, mostrando {1} coches, de {2} a {3}. Página {4} / {5}
 date_comp_header=Etiqueta input de Fecha
 date_comp_text1=Dame una fecha
 date_comp_text2=La fecha es:
