added new component swapimage
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167505 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_es.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_es.properties
@@ -33,6 +33,7 @@ nav_panelstack      = Panel en pila
 nav_css             = Hoja de estilos
 nav_newspaperTable  = Tabla de Noticias
 nav_HtmlEditor		= Editor Html
+nav_swapimage       = SwapImage
 # buttons
 
 button_save = Guardar 
