--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
@@ -29,6 +29,7 @@ nva_dataScroller    = DataScroller
 nav_Date			= Date
 nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
+nav_swapimage       = SwapImage
 
 # buttons
 
