--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ca.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ca.properties
@@ -33,6 +33,7 @@ nav_panelstack      = Panel en pila
 nav_css             = Full d'estils 
 nav_newspaperTable  = Taula de notícies
 nav_HtmlEditor		= Editor Html
+nav_swapimage       = SwapImage
 # buttons
 
 button_save = Desar 
