--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -30,6 +30,7 @@ nav_dataScroller    = DataScroller
 nav_Date			= Datum
 nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
+nav_swapimage       = SwapImage
 
 # buttons
 
