--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_pt_BR.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_pt_BR.properties
@@ -31,6 +31,7 @@ nav_Date			= Data
 nav_panelstack      = Panel Stack
 nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
+nav_swapimage       = SwapImage
 
 # buttons
 
