added patch form sean schofield. forceId for reuse of "legacy JavaScript" (MyFaces-70)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167510 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ca.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ca.properties
@@ -33,6 +33,8 @@ nav_panelstack      = Panel en pila
 nav_css             = Full d'estils 
 nav_newspaperTable  = Taula de notícies
 nav_HtmlEditor		= Editor Html
+nav_forceId         = ForceId
+
 nav_swapimage       = SwapImage
 # buttons
 
@@ -155,3 +157,6 @@ js_popup=Calendari com un popup JavaScript.
 js_form=Calendari com un formulari.
 js_submit=Enviar
 css_msg=Una prova simple per  
+
+forceOne=Value 1 @TRANSLATE
+forceTwo=Value 2 (with forceId) @TRANSLATE
