--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_fr.properties
@@ -29,7 +29,9 @@ nva_dataScroller    = DataScroller
 nav_Date			= Date
 nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
+nav_forceId         = ForceId
 nav_swapimage       = SwapImage
+
 
 # buttons
 
@@ -100,3 +102,6 @@ validate_credit = Credit Card
 validate_regexp = Regular Expression
 validate_equal = Equal
 validate_isbn = ISBN
+
+forceOne=Value 1 @TRANSLATE
+forceTwo=Value 2 (with forceId) @TRANSLATE
