--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ja.properties
@@ -31,7 +31,9 @@ nav_Date			= \u65e5\u4ed8
 nav_panelstack      = \u30d1\u30cd\u30eb\u30b9\u30bf\u30c3\u30af
 nav_css             = \u30b9\u30bf\u30a4\u30eb\u30b7\u30fc\u30c8
 nav_newspaperTable  = Newspaper Table
+nav_forceId         = ForceId
 nav_swapimage       = SwapImage
+
 
 # buttons
 
@@ -159,3 +161,5 @@ js_submit=\u9001\u4fe1
 css_msg=\u6b21\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306e\u7c21\u5358\u306a\u30c6\u30b9\u30c8\u3067\u3059:
 
 
+forceOne=Value 1 @TRANSLATE
+forceTwo=Value 2 (with forceId) @TRANSLATE
