--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_pt_BR.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_pt_BR.properties
@@ -31,7 +31,9 @@ nav_Date			= Data
 nav_panelstack      = Panel Stack
 nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
+nav_forceId         = ForceId
 nav_swapimage       = SwapImage
+nav_forceId         = Force ID
 
 # buttons
 
@@ -154,3 +156,6 @@ js_popup=Calendário como um popup JavaScript.
 js_form=Calendário como um formulário.
 js_submit=Enviar
 css_msg=Um teste simples para o
+
+forceOne=Value 1 @TRANSLATE
+forceTwo=Value 2 (with forceId) @TRANSLATE
