--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -30,6 +30,7 @@ nav_dataScroller    = DataScroller
 nav_Date			= Datum
 nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
+nav_forceId         = ForceId
 nav_swapimage       = SwapImage
 
 # buttons
@@ -101,3 +102,6 @@ validate_credit = Credit Card
 validate_regexp = Regular Expression
 validate_equal = Equal
 validate_isbn = ISBN
+
+forceOne=Eingabe 1
+forceTwo=Eingabe 2 (mit forceId) 
