--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_es.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_es.properties
@@ -33,6 +33,8 @@ nav_panelstack      = Panel en pila
 nav_css             = Hoja de estilos
 nav_newspaperTable  = Tabla de Noticias
 nav_HtmlEditor		= Editor Html
+nav_forceId         = ForceId
+
 nav_swapimage       = SwapImage
 # buttons
 
@@ -155,3 +157,6 @@ js_popup=Calendario como un popup JavaScript.
 js_form=Calendario como un formulario.
 js_submit=Enviar
 css_msg=Una prueba simple para 
+
+forceOne=Value 1 @TRANSLATE
+forceTwo=Value 2 (with forceId) @TRANSLATE
