i18n (it translations) thanks to Francesco Consumi
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167524 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/javax/faces/Messages_it.properties
+++ b/src/myfaces/javax/faces/Messages_it.properties
@@ -13,9 +13,10 @@
 # limitations under the License.
 
 # standard messages (Spec. 2.5.1.4)
+# last edit 13-jan-2005
 
 javax.faces.component.UIInput.CONVERSION        = Errore di conversione
-javax.faces.component.UIInput.CONVERSION_detail = "{0}": Errore durante l' aggiornamento del data model
+javax.faces.component.UIInput.CONVERSION_detail = "{0}": Errore durante l'' aggiornamento del data model
 
 javax.faces.component.UIInput.REQUIRED        = Errore di convalida
 javax.faces.component.UIInput.REQUIRED_detail = "{0}": Il valore è obbligatorio
@@ -106,22 +107,22 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": Il valore specific
 
 org.apache.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 org.apache.myfaces.Email.INVALID = Errore di convalida
-org.apache.myfaces.Email.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct email-address.
+org.apache.myfaces.Email.INVALID_detail =Il valore ({0}) non è un indirizzo e-mail corretto.
 
 org.apache.myfaces.Equal.INVALID = Errore di convalida
-org.apache.myfaces.Equal.INVALID_detail =TRANSLATE__The given value ({0}) is not equal with value of "{1}".
+org.apache.myfaces.Equal.INVALID_detail =Il valore ({0}) non è uguale al valore di "{1}".
 
 org.apache.myfaces.Creditcard.INVALID = Errore di convalida
-org.apache.myfaces.Creditcard.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct creditcard
+org.apache.myfaces.Creditcard.INVALID_detail =Il valore ({0}) non è un codice di carta di credito valido.
 
 org.apache.myfaces.Regexpr.INVALID=Errore di convalida
-org.apache.myfaces.Regexpr.INVALID_detail=TRANSLATE__The given value ({0}) is not valid.
+org.apache.myfaces.Regexpr.INVALID_detail=Il valore ({0}) non è valido.
 
 org.apache.myfaces.Date.INVALID = Errore di convalida
-org.apache.myfaces.Date.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct date
+org.apache.myfaces.Date.INVALID_detail =Il valore ({0}) non è una data corretta.
 
 org.apache.myfaces.ticker.NOCONNECTION = Nessuna connessione: 
 org.apache.myfaces.ticker.NOCONNECTION_detail = Forse si è dietro ad un firewall ?
 
 org.apache.myfaces.ISBN.INVALID =Errore di convalida
-org.apache.myfaces.ISBN.INVALID_detail =TRANSLATE__The given value ({0}) is not a correct isbn code.
+org.apache.myfaces.ISBN.INVALID_detail =Il valore ({0}) non è un codice ISBN corretto.
