closed MYFACES-90. Thanks to Bruno Aranda
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167551 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ca.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_ca.properties
@@ -133,7 +133,7 @@ popup_week_string=Sem.
 
 
 selectBoxPanel=Panell de SelectBox
-treePanel=Panel àrbre
+treePanel=Panell àrbre
 
 fileupload_title=Pujada d'arxiu
 fileupload_gimmeimage=Dona'm una imatge:
@@ -158,5 +158,5 @@ js_form=Calendari com un formulari.
 js_submit=Enviar
 css_msg=Una prova simple per  
 
-forceOne=Value 1 @TRANSLATE
-forceTwo=Value 2 (with forceId) @TRANSLATE
+forceOne=Valor 1
+forceTwo=Valor 2 (amb forceId)
