--- a/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_es.properties
+++ b/webapps/examples/src/org/apache/myfaces/examples/resource/example_messages_es.properties
@@ -158,5 +158,5 @@ js_form=Calendario como un formulario.
 js_submit=Enviar
 css_msg=Una prueba simple para 
 
-forceOne=Value 1 @TRANSLATE
-forceTwo=Value 2 (with forceId) @TRANSLATE
+forceOne=Valor 1
+forceTwo=Valor 2 (con forceId)
