added new crosstable component (x:columns). Contributed by Mathias Broekelmann
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167722 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -13,6 +13,7 @@ Changes in Release 1.0.9
 * added caching to the ExtensionsFilter
 * rename x:htmlEditor to x:inputHtml
 * add a fallback textarea mode to inputHtml
+* added crosstable component (x:columns)
 * closed MYFACES-38 in Jira
 * closed MYFACES-85 in Jira
 * closed MYFACES-96 in Jira (Jason Hoo)
