--- a/webapps/src/example/org/apache/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/src/example/org/apache/myfaces/examples/resource/example_messages_de.properties
@@ -32,6 +32,7 @@ nav_css             = Stylesheet
 nav_newspaperTable  = Newspaper Table
 nav_forceId         = ForceId
 nav_swapimage       = SwapImage
+nav_crossDataTable  = Kreuztabelle
 
 # buttons
 
@@ -105,3 +106,9 @@ validate_isbn = ISBN
 
 forceOne=Eingabe 1
 forceTwo=Eingabe 2 (mit forceId) 
+
+
+crosstable_field_column=Spaltenname
+crosstable_add_column=Spalte hinzufügen
+crosstable_remove_column=Spalte löschen
+crosstable_save_values=Werte speichern
